--- a/config/database.yml
+++ b/config/database.yml
@@ -7,9 +7,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: 'localhost'
-  username: 'shoe'
-  password: 'store'
+  host: db
+  username: postgres
+  password: postgres
+  pool: 5
+  timeout: 5000
 
 development:
   <<: *default
